# pr_firm

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  flow.py  main.py  nodes.py  pr_flow.py  pr_nodes.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt
.bmad-core/: install-manifest.yaml
.cursor/rules/: context-gathering.mdc  persistance.mdc  tool-preamble.mdc
.github/workflows/: ci-pipeline.yml
.roo/rules/: code-quality.md  code-review.md
assets/: INDEX.md
docs/: INDEX.md  design.md  prd.md  technical-debt-assessment.md
docs/architecture/: README.md  coding-standards.md  source-tree.md  technical-summary.md
docs/prd/: 1-executive-summary.md  10-dependencies-constraints.md  11-appendices.md  2-user-personas-use-cases.md  3-functional-requirements.md  4-non-functional-requirements.md  5-technical-architecture.md  6-implementation-plan.md  7-testing-strategy.md  8-risks-mitigation.md  9-success-metrics-kpis.md  README.md  approval-sign-offs.md  document-information.md  document_project_output.md  index.md  pr_firm_document_project_analysis.md  virtual-pr-firm-formatting-first-content-system.md
docs/qa/: README.md
docs/stories/: README.md  epic-brownfield-stabilization.md
scripts/: setup_dev.py
src/pr_firm/: __init__.py  main.py
tests/: conftest.py
tests/integration/: test_brand_pipeline.py
tests/unit/: test_brand_parsing.py  test_flows.py  test_llm_calls.py  test_main.py  test_nodes_main.py  test_shared_store.py  test_style_violations.py
utils/: INDEX.md  brand_bible_parser.py  brand_voice_mapper.py  call_llm.py  check_style_violations.py  format_platform.py  input_normalize.py  openrouter_client.py  presets.py  progress.py  report_builder.py  rewrite_with_constraints.py  streaming.py
(+36 files in other folders)
